BUG: Add ability to align youtube media

--- a/scss/typography.scss
+++ b/scss/typography.scss
@@ -120,10 +120,31 @@ EXPRESS TYPOGRAPHY
 	.external {
 //		padding-right: 22px;
 	}
+
+	/* Media insert formatting  (Youtube embed) */
+	.media.center{
+		margin:0 auto;
+		text-align:center;
+	}
+	.media.left{
+		float:left;
+		clear:left;
+		margin: 0 18px 18px 0px;
+	}
+	.media.leftAlone{
+		margin: 0 18px 18px 0;
+		float: none;
+		display: block;
+		clear: both;
+	}
+	.media.right{
+		float:right;
+		clear:right;
+		margin: 0 0 18px 18px;
+	}
 	
 	
-	/*** Image formatting ***/	
-	
+	/*** Image formatting ***/
 	img{
 		max-width: 100%;
 		height: auto;
